# School-Management-System

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
academics/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
academics/migrations/: 0001_initial.py  0002_initial.py  0003_semester_unique_semester.py  0004_semester_is_active.py  0005_remove_semester_is_active_semester_status.py  0006_alter_department_code_alter_program_duration_years.py
academics/tests/: test_models.py  test_views.py
attendances/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
attendances/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_attendance_options_and_more.py  0005_alter_attendance_remarks.py  0006_alter_attendance_remarks.py
config/: settings.py  urls.py
courses/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_class_is_active.py  0004_assessment_assessment_unique_assessment_course_class.py
courses/templatetags/: status_extras.py
static/js/: main.js
templates/: base.html  table_actions.html  table_layout.html  table_layout_instructor.html  test.html
templates/errors/: 403.html  404.html  500.html
templates/partials/: _filter_card.html  _messages.html  _notifications.html  _search_form.html  _user_profile.html  header.html  (+3 more)
users/: admin.py  error_handlers.py  forms.py  instructor_urls.py  instructor_views.py  mixins.py  models.py  signals.py  student_urls.py  student_views.py  urls.py  views.py
(+67 files in other folders)
